# calisthenics-recommender

./: .dockerignore  .gitignore  Dockerfile  PROJECT_BRIEF_FOR_CODEX.md  PROJECT_BRIEF_FOR_CODEX_CURRENT.md  PROJECT_ROADMAP_NEXT.md  README.md  V2_REFACTOR_PLAN.md  docker-compose.yml  pyproject.toml
config/: docker-runtime.toml.example
docs/: ARCHITECTURE.md
scripts/: build_exercise_cache.py  debug_recommendations.py  demo_recommend.py  import_exercises_to_sqlite.py  prepare-docker-smoke.ps1
src/calisthenics_recommender/: config.py  wiring.py
tests/: test_config.py
tests/adapters/: test_csv_exercise_repository.py  test_fake_embedding_provider.py  test_jsonl_embedded_exercise_search_repository.py  test_local_embedded_exercise_cache.py  test_sentence_transformer_embedding_provider.py  test_sqlite_embedded_exercise_cache.py  test_sqlite_embedded_exercise_search_repository.py  test_sqlite_exercise_repository.py  test_sqlite_pending_embedding_updates.py
tests/api/: test_app.py  test_runtime.py
tests/application/: test_embedded_exercise_builder.py  test_embedded_exercise_cache_workflow.py  test_exercise_text_builder.py  test_explanation_builder.py  test_filters.py  test_process_pending_embedding_updates_workflow.py  test_query_builder.py  test_recommend_exercises.py  test_recommendation_response_builder.py  test_retriever.py  test_similarity.py
tests/domain/: test_embedded_exercise.py  test_embedded_exercise_search_result.py  test_exercise.py  test_recommendation.py  test_user_request.py
tests/integration/: test_local_fake_cache_pipeline.py
(+57 files in other folders)
