[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "calisthenics-recommender"
version = "0.1.0"
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy>=2.4.4",
    "pydantic>=2",
    "sentence-transformers>=5.4.1",
]

[project.scripts]
build-exercise-cache = "calisthenics_recommender.cli.build_exercise_cache:main"
demo-recommend = "calisthenics_recommender.cli.demo_recommend:main"
debug-recommendations = "calisthenics_recommender.cli.debug_recommendations:main"
import-exercises-to-sqlite = "calisthenics_recommender.cli.import_exercises_to_sqlite:main"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]

[tool.hatch.build.targets.wheel]
packages = ["src/calisthenics_recommender"]
